# PixiePhysics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: enttImport.cmake  glmImport.cmake  gtestImport.cmake  raylibImport.cmake
example/: Lights.h
src/physics/: ContactPoint.hpp
src/physics/components/: RigidBody.hpp  ShapeBox.hpp  ShapeLine.hpp  ShapeSphere.hpp  SphereShape.hpp  StaticBody.hpp  Transform.hpp  TransformDynamic.hpp  TransformStatic.hpp
src/physics/lib/: BoxBoxCollisionTest.cpp  BoxBoxCollisionTest.hpp  BoxSphereCollisionTest.cpp  BoxSphereCollisionTest.hpp  ContactPoint.hpp  SphereIntersectionTest.cpp  SphereIntersectionTest.hpp  SphereSphereCollisionTest.cpp  SphereSphereCollisionTest.hpp
src/physics/systems/: ResolveCollisions.cpp  ResolveCollisions.hpp  UpdateTransform.cpp  UpdateTransform.hpp
src/rendering/components/: RendererMaterial.hpp
src/rendering/systems/: RenderSystem.cpp  RenderSystem.hpp
src/scene/: Scene.cpp  Scene.hpp
src/ui/: DebugTimer.hpp
test/: CMakeLists.txt  firstTest.cpp
